Solve day 7 part 2